--- a/wiki/Explanation.wiki
+++ b/wiki/Explanation.wiki
@@ -1,19 +1,7 @@
-#summary One-sentence summary of this page.
+To explain real quick if you look at the painting at the end of this page 
 
-= Introduction =
+https://sites.google.com/site/moralitytechnology/Disclaimer
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
-
-
-to explain real quick if you look at the painting i forwarded to you
  you will see hearts hands and feet.
 
  one circle inside the other means the outside one is made out of
